FIXED second vertical scrollbar (removed padding)

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,6 @@
     background-color: blue;
 }
 
-#player {
-    height: 75px;
-    background-color: rgb(40,40,40);
-}
-
-
-
 .top-content { 
     display: flex;
     background-color: green;
@@ -29,7 +22,7 @@
 
 .main-content {
     width: calc(100vw - 50px);
-    background-color: rgb(38, 41, 45);
+    background-color: rgb(21, 25, 33);
     overflow-y: auto;
 }
 
@@ -65,6 +58,7 @@ header {
     width: 100%;
     height: 25px;
 }
+
 /* SIDEBAR  */
 #sidebar {
     width: 50px;
@@ -80,9 +74,11 @@ header {
 .sidebar-content .row {
     flex-direction: column;
 }
+
 /* PLAYER  */
-#player .row {
-    
+#player {
+    height: 75px;
+    background-color: rgb(40,40,40);
 }
 
 .cover-sm {
@@ -96,6 +92,7 @@ header {
     font-size: 0.8rem;
     margin: auto 5px;
 }
+
 /* COMMON */
 .row {
     display: flex;
@@ -158,6 +155,7 @@ nav ul {
 .p-3 {
     padding: 30px;
 }
+
 /* COLUMN */
 .col-100 {
     width: 100%;
